--- a/src/index.jade
+++ b/src/index.jade
@@ -3,11 +3,10 @@ html.no-js
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    title Dyno
+    title Is Rob Home Yet?
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel="stylesheet", href="stylesheets/main.css")
     script(src="scripts/app.js")
   body
-
-  h1 WIP
+    h1 WIP
