--- a/src/index.jade
+++ b/src/index.jade
@@ -9,4 +9,5 @@ html.no-js
     link(rel="stylesheet", href="stylesheets/main.css")
     script(src="scripts/app.js")
   body
-    h1 WIP
+    h1 Is Rob Home?
+    h2 No
