--- a/src/index.jade
+++ b/src/index.jade
@@ -25,4 +25,12 @@ html.no-js
               img(src="/images/robfact.png")
             .fact
               p
+      h2.another-robfact Show Me Another
+    footer
+      .contents
+        .sb
+          a(href="http://sbox.es")
+            span.smashing SMASHING
+            span.boxes BOXES
     script(src="scripts/app.js")
+
