--- a/src/index.jade
+++ b/src/index.jade
@@ -25,7 +25,7 @@ html.no-js
               img(src="/images/robfact.png")
             .fact
               p
-      h2.another-robfact Show Me Another
+      h2.another-robfact SHOW ME ANOTHER
       footer
         .contents
           .sb
