--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -54,7 +54,7 @@ a {
 }
 
 .robfact {
-  font-family: "Roboto" sans-serif;
+  font-family: "Roboto", sans-serif;
   .well {
     background-color: $dark-black;
   }
