--- a/src/index.jade
+++ b/src/index.jade
@@ -28,7 +28,7 @@ html.no-js
       footer
         .contents
           .sb
-            a(href="http://sbox.es")
+            a(href="http://smashingboxes.com")
               span.smashing SMASHING
               span.boxes BOXES
     script(src="scripts/app.js")
