--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,7 +11,7 @@ $dark-black: #211f20;
 body {
   background-color: #282828;
   color: white;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat;
 }
 
 h1 {
